# git-qalam

./: .gitignore  CONTEXT.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.qwen/: PROJECT_SUMMARY.md
src/: App.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  git_operations.rs  lib.rs  main.rs
src/components/: ConflictResolutionModal.tsx  GitHubAuth.tsx  NoteEditor.tsx  NoteList.tsx  Notification.tsx  TiptapEditor.tsx  math-renderer.ts  mermaid-renderer.ts
