[package]
name = "git-qalam"
version = "0.1.0"
description = "A Tauri App built with Rust and SolidJS"
authors = ["you"]
edition = "2021"

[lib]
name = "git_qalam_lib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
comrak = "0.28"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-http = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.1"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
